add project page and links to other pages

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,5 +1,4 @@
 {{> header}}
-    <h1>{{pageTitle}}</h1>
-    <p>Some text here</p>
+    <p>This is the page that tells you all about stuff.</p>
         
 {{> footer}}
