--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,3 +5,9 @@
     	<title>{{pageTitle}}</title>
     </head>
     <body>
+        <header>
+            <h1>{{pageTitle}}</h1>
+            <p><a href="/">Home</a></p>
+            <p><a href="/about">About</a></p>
+            <p><a href="/projects">Projects</a></p>
+        </header>
